# helping-hand

./: .gitignore  README.md
app/: index.html
docs/: roadmap.md
firmware/: Cargo.toml  build.rs  flake.nix
firmware/.cargo/: config.toml
firmware/src/: lib.rs  logic.rs  main.rs  network.rs  server.rs  servo.rs  utils.rs
remote-firmware/: .clangd  Cargo.toml  Makefile  remote-firmware.ino  sketch.yaml
remote-firmware/.cargo/: config.toml
remote-firmware/src/: main.rs
remote-firmware/src/main/: start.cpp  start.h
