[package]
name = "esp-hello"
version = "0.1.0"
authors = ["gruvw <gruvw.dev@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp-hello"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
anyhow = "1.0"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync", "std"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
pwm-pca9685 = "1.0.0"
esp-idf-hal = "0.46.2"
embedded-hal = "1.0.0"

[build-dependencies]
embuild = "0.33"
